[project]
name = "fd-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lucifer516-sudoer", email = "harishvengatachalam02092005@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[dev]>=0.115.13",
    "rich>=14.0.0",
    "sqlmodel>=0.0.24",
]

[project.scripts]
fd-viewer = "fd_viewer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
